--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -8,6 +8,8 @@ title: Fired Up!
 <div class="container-fluid mb-1">
       <div class="row">
         <div class="offset-lg-3 col-lg-6">
+            <h1 class="display-1" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
+            <p class="lead">{{ project.description }}</p>
         {% assign slide-content-list = "
         video;https://player.vimeo.com/video/726483205?h=8fdfd4bfee,
         image;/assets/images/fired_up/fired_up_screen_1.png,
