Switched info and core intentions fired up

--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -25,17 +25,8 @@ title: Fired Up!
         {% include thumbnail-carousel.html slide-content=slide-content-list
           thumbnail-images=thumbnails
           carousel-id="fired-up-thumbnail-carousel" %}
-        <div class="mt-3 p-3">
-            <h5>Our core intentions</h5>
-            <ul>
-              <li>Couch co-op game</li>
-              <li>Chaos</li>
-              <li>High level of interaction : using everything in the house</li>
-              <li>Multiple small levels</li>
-            </ul>
         </div>
-        </div>
-        <div class="col-lg-3 my-2 sticky-top py-2">
+        <div class="col-lg-3 my-2 sticky-lg-top py-2">
             <div class="row justify-content-center">
                 <div class="col-lg-9 shadow d-none d-lg-block p-3">
                     <h2>Infos</h2>
@@ -64,6 +55,17 @@ title: Fired Up!
                     <a class="btn btn-primary btn-sm btn-block" href="#" role="button">Download on itch.io</a>
                 </div>
             </div>
+        </div>
+        <div class="offset-lg-3 col-lg-6">
+          <div class="mt-3 p-3">
+              <h5>Our core intentions</h5>
+              <ul>
+                <li>Couch co-op game</li>
+                <li>Chaos</li>
+                <li>High level of interaction : using everything in the house</li>
+                <li>Multiple small levels</li>
+              </ul>
+          </div>
         </div>
     </div>
 </div>
