--- a/projects/45-degrees.html
+++ b/projects/45-degrees.html
@@ -2,4 +2,321 @@
 layout: project
 title: 45°
 ---
-45°
+{% assign project = site.data.projects.b_45 %}
+<div class="container-fluid mb-1">
+      <div class="row">
+        <div class="offset-lg-3 col-lg-6">
+            <h1 class="display-1" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
+            <p class="lead">{{ project.description }}</p>
+        {% assign slide-content-list = "
+        video;https://www.youtube.com/embed/tQiUdatfsO0,
+        image;/assets/images/45_degrees/45_degrees_screen_1.png,
+        image;/assets/images/45_degrees/45_degrees_screen_2.png,
+        image;/assets/images/45_degrees/45_degrees_screen_3.png" | split: "," %}
+        {% assign thumbnails = "
+        /assets/images/45_degrees/thumbnail_video.png,
+        /assets/images/45_degrees/45_degrees_screen_1.png,
+        /assets/images/45_degrees/45_degrees_screen_2.png,
+        /assets/images/45_degrees/45_degrees_screen_3.png" | split: "," %}
+        {% include thumbnail-carousel.html slide-content=slide-content-list
+          thumbnail-images=thumbnails
+          carousel-id="fired-up-thumbnail-carousel" %}
+        </div>
+        <div class="col-lg-3 my-2 sticky-lg-top py-2">
+          {% include project-info.html project=project %}
+        </div>
+        <div class="offset-lg-3 col-lg-6">
+          <div class="mt-3 p-3">
+              <h5>Our core intentions</h5>
+              <ul>
+                <li>Couch co-op game</li>
+                <li>Chaos</li>
+                <li>High level of interaction : using everything in the house</li>
+                <li>Multiple small levels</li>
+              </ul>
+          </div>
+        </div>
+    </div>
+</div>
+<div class="jumbotron mt-1 pt-1">
+  <div class="container-fluid">
+    <div class="row justify-content-md-center align-items-start">
+      <div class="col-md-6 p-3">
+        <div class="row my-2 p-2">
+          <h1 class="col-12">My missions</h1>
+          <hr class="col-12">
+          <div class="col-12 col-lg-6">
+            <h6>Game Design</h6>
+            <ul>
+              <li>Designing <b>core mechanics</b></li>
+              <li>Designing <b>3Cs</b></li>
+              <li><b>Balancing</b></li>
+              <li>Designing <b>signs & feedbacks</b></li>
+              <li>Integrating <b>assets</b></li>
+            </ul>
+          </div>
+          <div class="col-12 col-lg-6">
+            <h6>Level design</h6>
+            <ul>
+              <li><b>Design and blockouts</b></li>
+              <li>Iterating on levels</li>
+            </ul>
+          </div>
+          <div class="col-12">
+            <h6>UX</h6>
+            <ul>
+              <li>Designing & implementing <b>onboarding</b></li>
+              <li>Screen mockups</li>
+            </ul>
+          </div>
+        </div>
+        <!-- For this game, we wanted our players to have fun together discovering the many ways there are to put down the fire in a chaotic mood.
+        Players can use anything they like to extinguish the fire: real tools like an extinguisher, but also ordinary objects found in the house. From an aquarium to a cardboard filled in the pool.
+
+        <p>We were two game designers on this project, so we had to split
+            tasks and to organize ourselves to be more efficient.
+            </p> -->
+        <!--<div class="alert alert-primary alert-dismissible fade show" role="alert">
+
+           <i class="bi bi-info-circle-fill"></i> 
+           We were two game designers on this project. Go checkout the work of <b>Keltoum</b>!
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+             <span aria-hidden="true">&times;</span>
+          </button>
+        </div>-->
+      </div>
+    </div>
+    <div class="row mt-4">
+      <h1 class="col-12 col-md-9 offset-md-3">Detailed Work</h1>
+      <hr class="col-12 col-md-6 offset-md-3">
+      <div class="col-md-3">
+        <div class="sticky-top pt-3">
+          <div class="nav flex-md-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            {% include v-pill-tab.html name="One Page" active="true" %}
+            {% include v-pill-tab.html name="Writing documents" %}
+            {% include v-pill-tab.html name="Research" %}
+            <hr class="my-1 w-100 d-none d-md-block">
+            {% include v-pill-tab.html name="Metrics" %}
+            {% include v-pill-tab.html name="Balancing" %}
+            <hr class="my-1 w-100 d-none d-md-block">
+            {% include v-pill-tab.html name="Team work" %}
+            <!--{% include v-pill-tab.html name="3Cs" %}
+            {% include v-pill-tab.html name="Features" %}
+            {% include v-pill-tab.html name="Level Design" %}-->
+          </div>
+        </div>
+      </div>
+      <hr class="d-md-none d-block w-100">
+      <div class="col-md-6 mt-3">
+        <div class="tab-content" id="v-pills-tabContent">
+          {% include v-pill-tab-content.html name="Team work" %}
+            <h2 class="mb-4">Team work</h2>
+            <div class="row">
+              <div class="col-lg-6">
+                  {% assign image_list = "
+                  /assets/images/fired_up/design_documents/miro-brainstorming-zoomed-in.png,
+                  /assets/images/fired_up/design_documents/GD_presentation.png
+                  " | split: "," %}
+                  {% assign caption_list = "
+                  Brainstorming organized on Miro,
+                  Synthetic presentations to share the latest key decisions to the team.
+                  " | split: "," %}
+                  {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_communication" %}
+              </div>
+              <div class="col-lg-6">
+                <h5>Including the team</h5>
+                <p>
+                  We <b>gathered ideas</b> during <b>brainstorming</b> sessions
+                  that we would then <b>filter and refine</b> to get to
+                  mechanics matching our intentions and scope.
+                </p>
+                <h5>Keeping the team informed</h5>
+                <p>
+                  We also held small and short meetings to <b>keep the team updated</b> with
+                  <b>key decisions</b> in the beginning of the project.
+                </p>
+                <h5>Working with programmers</h5>
+                <p>
+                  My <b>engineering skills</b> allowed me to easily <b>understand
+                    programming challenges</b> and to design features with the <b>right
+                  level of detail</b>.
+                </p>
+              </div>
+            </div>
+          {% include div-end.html %}
+          
+          {% include v-pill-tab-content.html name="Writing Documents" %}
+            <h2 class="mb-4">Writing Documents</h2>
+            <div class="row justify-content-lg-center">
+              <p class="col-12">
+                <b>Writing synthetic and comprehensive documents</b> which can be modified
+                and shared easily is decisive. Here is an excerpt from a document
+                I have made for this project.
+              </p>
+              <div class="col-12">
+                  {% assign image_list = "
+                  /assets/images/fired_up/design_documents/example_document_1.png,
+                  /assets/images/fired_up/design_documents/example_document_2.png,
+                  /assets/images/fired_up/design_documents/example_document_3.png,
+                  /assets/images/fired_up/design_documents/example_document_4.png
+                                    " | split: "," %}
+                  {% assign caption_list = "
+                  Writing synthetic and comprehensive specs with clear schemes,
+                  Using Google Slides allows for easier teamwork,
+                  The whole document is made with one software to foster fast iterations,
+                  Coherent symbols in every schemes make for a more readable document
+                  " | split: "," %}
+                  {% include image_carousel.html images=image_list captions=caption_list loop-caption="true" carousel-id="fired_up_carousel_specifications" %}
+              </div>
+            </div>
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="Research" %}
+            <h2 class="mb-4">Research</h2>
+            <div class="row">
+              <div class="col-lg-6">
+                <h5>Making well informed decisions.</h5>
+                <p>
+                I investigated <b>several subjects</b> during this project to be able
+                to make <b>well informed decisions</b>. To be more efficient, we split
+                the workload to research key design fields during the beginning
+                of the project.
+                </p>
+
+                <h5>Research in Level Design</h5>
+                <p>
+                Iterating over level design and testing out ideas was also part of
+                my work in this project.
+                </p>
+              </div>
+              <div class="col-lg-6">
+                  {% assign image_list = "
+                  /assets/images/fired_up/design_documents/systemic_gd_research_overview_square.png,
+                  /assets/images/fired_up/design_documents/verticality_research_overview.png,
+                  /assets/images/fired_up/design_documents/exploration_ld_lvl3_square.gif
+                  " | split: "," %}
+                  {% assign caption_list = "
+                  Research on systemic game design,
+                  Exploring the relevance of verticality for our levels,
+                  Iterations and exploration for the game last level
+                  " | split: "," %}
+                  {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_research" %}
+              </div>
+            </div>
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="3Cs" %}
+            <h2 class="mb-4">3Cs</h2>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="Metrics" %}
+            <h2 class="mb-4">Metrics</h2>
+            <div class="row">
+              <div class="col-lg-6">
+                  {% assign image_list = "
+                  /assets/images/fired_up/design_documents/camera_ground_square.png,
+                  /assets/images/fired_up/design_documents/camera_metrics_square.png,
+                  /assets/images/fired_up/design_documents/metrics_square.png
+                  " | split: "," %}
+                  {% assign caption_list = "
+                  Camera projection on ground to build well sized levels;
+                  Camera minimal zoom to ensure objects that are big enough on screen;
+                  Objects size (non-interactable in blue, interactable in yellow)
+                  " | split: ";" %}
+                  {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_metrics" %}
+              </div>
+              <div class="col-lg-6">
+                <h5>Camera</h5>
+                <p>
+                We defined camera's maximum range, object and character sizes to <b>ensure game readability</b>.
+                This led to our level size as we wanted <b>one-screen levels</b>.
+                </p>
+                <h5>Level Metrics</h5>
+                Walls' height and thickness were then defined on the camera view to <b>minimize
+                blind spots</b> while still <b>ensuring circulation clarity</b>. 
+                <br>We used a base unit (1m) to build our levels.
+                </p>
+                <h5>Helpers</h5>
+                <p>
+                I made helpers to <b>ensure metrics were respected</b> when we integrated content
+                and designed levels.
+                </p>
+              </div>
+            </div>
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="Features" %}
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="Balancing" %}
+            <h2 class="mb-4">Balancing</h2>
+            <div class="row">
+              <div class="col-lg-6">
+              <h5>Using external playtests</h5>
+              <p>
+              Our UX/UR designer made several playtests to gather feedbacks,
+              but we had not enough iterations to balance the game with only these playtests.
+              </p>
+              <h5>Balancing a game in a small amount of time</h5>
+              <p>
+              We dedicated team playtests to balancing. During these sessions I balanced the game on the fly,
+              taking into account our dev team's skills, which allowed an overall balanced experienced
+              despite our small time resources.
+              </p>
+              </div>
+              <div class="col-lg-6">
+                  {% assign image_list = "
+                  /assets/images/fired_up/design_documents/balancing-unity-layout.png,
+                  /assets/images/fired_up/design_documents/DDA.png
+                  " | split: "," %}
+                  {% assign caption_list = "
+                  Custom unity layout to have all interesting values to balance during balancing playtests;
+                  Dynamic difficulty adjustment scheme
+                  " | split: ";" %}
+                  {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_balancing" %}
+              </div>
+            </div>
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="Level Design" %}
+            <h2 class="mb-4">Level Design</h2>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
+          {% include div-end.html %}
+          {% include v-pill-tab-content.html name="One Page" active="true" %}
+            <h2 class="mb-4">One Page</h2>
+            <div class="row">
+              <div class="col-12 col-md-6">
+              <a href="/assets/images/fired_up/design_documents/One_Page_Burnout.png" id="pop">
+                  <img class="img-thumbnail img-fluid" id="imageresource" src="/assets/images/fired_up/design_documents/One_Page_Burnout.png">
+              </a>
+              <a class="badge badge-primary" href="/assets/images/fired_up/design_documents/One_Page_Burnout.png" id="pop">
+                  Click to enlarge
+              </a>
+              </div>
+              <div class="col-12 col-md-6">
+                <h5>A reminder</h5>
+                <p>
+                  The role of this one page is to have all <b>core mechanics</b> of the game
+                  <b>synthetized in one poster</b> which is always <b>visible by the team</b>.
+                </p>
+                <h5>Feature Cuts</h5>
+                <p>
+                  Some of the presented features were cut. We kept mechanics
+                  that were the <b>most important</b> in building our goal experience.
+                </p>
+              </div>
+            </div>
+          {% include div-end.html %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container my-3 py-3">
+  {% assign credits-content = "Amaury Butaux : Game Design,
+        Antoine Rey : Game Design,
+        Anna Messerschmitt : Graphic Design,
+        Théophile Lauseig : Graphic Design,
+        Robin Alonzo : Programming,
+        Horion Raphaël : Programming,
+        Evan Col-Eyraud : UX/UI,
+        Dorian Desplats : Sound Design / Music Composer,
+        Liam Hô : Project Management"
+  %}
+  {% include credits.html content=credits-content %}
+</div>
