--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 ---
 layout: default
-title: Home
+title: Junior Game Designer
 ---
 {% include nav.html %}
 {% include featured-carousel.html %}
 <hr class="my-5">
 <div class="jumbotron-fluid mx-0 px-0 paralsec paral">
   <div class="px-3 py-5 my-0 text-left">
-    <div class="py-4"></div>
-    <div class="container">
+    <div class="container-fat">
       <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>User-Centric</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+      <div class="row d-flex justify-content-between">
+        <div class="col-md-4 my-3">
+          <h2>User-Centric <span class="text-muted">Design</span></h2>
+          <p class="lead">We make games for people to play.</p>
+          <p>That's why I always include user experience<br> in my design process.</p>
         </div>
-        <div class="col-md-4">
-          <h2>Rational</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <div class="col-md-4 my-3">
+          <h2>Rational <span class="text-muted">Design</span></h2>
+          <p class="lead">Informed decisions make better games.</p>
+          <p>
+            Research, fast prototyping, metrics and focused iterations
+            are my main tools to make them.
+          </p>
         </div>
-        <div class="col-md-4">
-          <h2>Documents</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <div class="col-md-4 my-3">
+          <h2>Collaborative <span class="text-muted">Design</span></h2>
+          <p class="lead">Making games is about teamwork.</p>
+          <p>
+            I care about others' and their challenges.<br>
+            I ensure a common vision through<br>
+            clear and synthetic documents and presentations.<br>
+          </p>
         </div>
       </div>
 
@@ -32,7 +38,7 @@ title: Home
   </div>
 </div>
 <div class="my-0 py-4 bg-primary"></div>
-<div class="fat-container px-4 pt-3">
+<div class="fat-container px-4 py-5">
   <h1 class="display-3 mb-5 text-center">Games</h1>
   {% assign sorted_projects = site.data.projects | sort %}
   {% include project_list.html projects=sorted_projects %}
