Updated main page, added cv

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ title: Junior Game Designer
       <!-- Example row of columns -->
       <div class="row d-flex justify-content-between">
         <div class="col-md-4 my-3">
-          <h2>User-Centric <span class="text-muted">Design</span></h2>
-          <p class="lead">We make games for people to play.</p>
+          <h2>User-Centric Design</h2>
+          <p class="lead">I make games for people to play.</p>
           <p>That's why I always include user experience<br> in my design process.</p>
         </div>
         <div class="col-md-4 my-3">
-          <h2>Rational <span class="text-muted">Design</span></h2>
+          <h2>Rational Design</h2>
           <p class="lead">Informed decisions make better games.</p>
           <p>
             Research, fast prototyping, metrics and focused iterations
@@ -24,10 +24,10 @@ title: Junior Game Designer
           </p>
         </div>
         <div class="col-md-4 my-3">
-          <h2>Collaborative <span class="text-muted">Design</span></h2>
+          <h2>Collaborative Design</h2>
           <p class="lead">Making games is about teamwork.</p>
           <p>
-            I care about others' and their challenges.<br>
+            I care about others and their challenges.<br>
             I ensure a common vision through<br>
             clear and synthetic documents and presentations.<br>
           </p>
